--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "angular2-http-file-upload": "^1.0.6",
+    "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "ng2-table": "^1.3.2",
+    "ngx-bootstrap": "^1.6.6",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
