--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^4.0.0",
     "angular2-http-file-upload": "^1.0.6",
     "bootstrap": "^3.3.7",
+    "chart.js": "^2.6.0",
     "core-js": "^2.4.1",
     "ng2-table": "^1.3.2",
     "ngx-bootstrap": "^1.6.6",
