--- a/package.json
+++ b/package.json
@@ -14,16 +14,17 @@
   "dependencies": {
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
-    "@angular/core": "^4.0.0",
+    "@angular/core": "^4.1.3",
     "@angular/forms": "^4.0.0",
     "@angular/http": "^4.0.0",
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@swimlane/ngx-charts": "^5.3.1",
     "angular2-http-file-upload": "^1.0.6",
     "bootstrap": "^3.3.7",
-    "chart.js": "^2.6.0",
     "core-js": "^2.4.1",
+    "d3": "^4.9.1",
     "ng2-table": "^1.3.2",
     "ngx-bootstrap": "^1.6.6",
     "rxjs": "^5.1.0",
